# datadirtest

./: .flake8  .gitignore  CLAUDE.md  README.md  bitbucket-pipelines.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  push.yml  python-tests.yml
datadirtest/: __init__.py  __main__.py  datadirtest.py
datadirtest/vcr/: __init__.py  pytest_plugin.py  recorder.py  sanitizers.py  scaffolder.py  validator.py
docs/: VCR_ARCHITECTURE.md
docs/html/datadirtest/: datadirtest.html  index.html
src/datadirtest/: datadirtest.py
src/datadirtest/vcr/: __init__.py
src/keboola/datadirtest/: __init__.py  __main__.py  datadirtest.py
src/keboola/datadirtest/vcr/: __init__.py  pytest_plugin.py  tester.py
tests/: test_datadirtest.py  test_vcr_tester.py
tests/chained_tests/: script.py
tests/chained_tests/chained_test/: set_up.py  tear_down.py
tests/chained_tests/chained_test/01_test/source/: set_up.py  tear_down.py
tests/chained_tests/chained_test/02_test/source/: set_up.py  tear_down.py
tests/chained_tests_artifacts/: script.py
tests/chained_tests_artifacts/chained_test/: set_up.py  tear_down.py
tests/chained_tests_artifacts/chained_test/01_test/source/: set_up.py
tests/chained_tests_artifacts/chained_test/02_test/source/: set_up.py
tests/resources/: script.py
tests/resources_passing/: script.py
tests/resources_passing/passing_scripts/source/: post_run.py  set_up.py  tear_down.py
tests/resources_passing/passing_scripts2/source/: post_run.py  set_up.py
tests/resources_passing_env_variables/: script.py
tests/resources_passing_env_variables/passing_scripts/source/: tear_down.py
tests/resources_passing_env_variables/passing_scripts/source/data/: config.json
todo/: log-capture-comparison.md
