[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "datadirtest"
version = "2.0.0"
description = "Functional testing framework for Keboola components with VCR support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
vcr = [
    "keboola.vcr>=0.1.0",
]
pytest = [
    "pytest>=7.0.0",
]
all = [
    "keboola.vcr>=0.1.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "flake8>=5.0.4",
]

[project.entry-points."pytest11"]
datadirtest_vcr = "datadirtest.vcr.pytest_plugin"

[project.urls]
Homepage = "https://github.com/keboola/datadirtest"
Repository = "https://github.com/keboola/datadirtest"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
