[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "keboola.datadirtest"
version = "0.0.0"  # replaced by the actual version based on the release tag in github actions
description = "Functional testing framework for Keboola components with VCR support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "keboola.vcr>=0.1.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/keboola/datadirtest"
Repository = "https://github.com/keboola/datadirtest"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.build-backend]
module-name = "keboola.datadirtest"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
